Cambios en PapeleriaApi

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -7,7 +7,8 @@
       "launchBrowser": false,
       "applicationUrl": "http://localhost:5100",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "GOOGLE_APPLICATION_CREDENTIALS": "C:\\Users\\pogo7\\OneDrive\\Desktop\\PapeleriaClna\\PapeleriaApi\\firebase-credentials.json"
       }
     },
     "https": {
@@ -16,7 +17,8 @@
       "launchBrowser": false,
       "applicationUrl": "https://localhost:5100;http://localhost:5100",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "GOOGLE_APPLICATION_CREDENTIALS": "C:\\Users\\pogo7\\OneDrive\\Desktop\\PapeleriaClna\\PapeleriaApi\\firebase-credentials.json"
       }
     }
   }
