--- a/appsettings.json
+++ b/appsettings.json
@@ -14,5 +14,12 @@
   "Firebase": {
     "ProjectId": "papeleriaweb-4709d",
     "CredentialsPath": "firebase-credentials.json"
-  }
+  },
+"Smtp": {
+  "Host": "smtp.gmail.com",
+  "Port": 587,
+  "EnableSsl": true,
+  "Username": "pogo77208@gmail.com",
+  "Password": "stuexymoulslgpvu"
+}
 }
